// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correct values when line items are available 1`] = `
<CartSummary
  cart={
    Object {
      "lineItems": Array [
        Object {
          "discount": "2.00",
          "imageUrl": "",
          "price": "10.00",
          "quantity": 2,
          "size": "size - 8",
          "sku": "123",
          "title": "test",
        },
      ],
    }
  }
  updateQuantity={[Function]}
>
  <section
    className="c-cart-summary"
  >
    <dl>
      <dt>
        <a>
          Total Price:
        </a>
      </dt>
      <dd>
        <a>
          £
          20.00
        </a>
      </dd>
    </dl>
    <dl>
      <dt>
        <a>
          Estimated shipping cost: £3.45
        </a>
      </dt>
    </dl>
    <dl>
      <dt>
        <a
          className="u-bold"
        >
          TOTAL:
        </a>
      </dt>
      <dd>
        <a
          className="u-bold"
        >
          £
          16.00
        </a>
      </dd>
    </dl>
    <dl>
      <a>
        * Including VAT
      </a>
    </dl>
  </section>
  <section
    className="c-cart-summary__buttons"
  >
    <Button
      aria-label="Continue Shopping"
      className="c-cart-summary__buttons--continue"
      label="Continue shopping"
      size="lrg"
      status="grey"
      type="button"
    >
      <button
        aria-label="Continue Shopping"
        className="c-cart-summary__buttons--continue o-button o-button--grey o-button--lrg"
        disabled={false}
        role="button"
        tabIndex="0"
        type="button"
      >
        Continue shopping
      </button>
    </Button>
    <Link
      as=""
      href="/checkout"
    >
      <Button
        aria-label="Place Order"
        className="c-cart-summary__buttons--proceed"
        label="Continue to payment"
        onClick={[Function]}
        size="lrg"
        status="positive"
        type="button"
      >
        <button
          aria-label="Place Order"
          className="c-cart-summary__buttons--proceed o-button o-button--positive o-button--lrg"
          disabled={false}
          onClick={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          Continue to payment
        </button>
      </Button>
    </Link>
  </section>
</CartSummary>
`;

exports[`renders correct values when no line items are available 1`] = `
<CartSummary
  cart={
    Object {
      "lineItems": Array [],
    }
  }
>
  <section
    className="c-cart-summary"
  >
    <dl>
      <dt>
        <a>
          Total Price:
        </a>
      </dt>
      <dd>
        <a>
          £
          0.00
        </a>
      </dd>
    </dl>
    <dl>
      <dt>
        <a>
          Estimated shipping cost: £3.45
        </a>
      </dt>
    </dl>
    <dl>
      <dt>
        <a
          className="u-bold"
        >
          TOTAL:
        </a>
      </dt>
      <dd>
        <a
          className="u-bold"
        >
          £
          0.00
        </a>
      </dd>
    </dl>
    <dl>
      <a>
        * Including VAT
      </a>
    </dl>
  </section>
  <section
    className="c-cart-summary__buttons"
  >
    <Button
      aria-label="Continue Shopping"
      className="c-cart-summary__buttons--continue"
      label="Continue shopping"
      size="lrg"
      status="grey"
      type="button"
    >
      <button
        aria-label="Continue Shopping"
        className="c-cart-summary__buttons--continue o-button o-button--grey o-button--lrg"
        disabled={false}
        role="button"
        tabIndex="0"
        type="button"
      >
        Continue shopping
      </button>
    </Button>
    <Link
      as=""
      href="/checkout"
    >
      <Button
        aria-label="Place Order"
        className="c-cart-summary__buttons--proceed"
        label="Continue to payment"
        onClick={[Function]}
        size="lrg"
        status="positive"
        type="button"
      >
        <button
          aria-label="Place Order"
          className="c-cart-summary__buttons--proceed o-button o-button--positive o-button--lrg"
          disabled={false}
          onClick={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          Continue to payment
        </button>
      </Button>
    </Link>
  </section>
</CartSummary>
`;
